--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="17" />
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/sicon"
@@ -27,10 +29,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    
-    
+        <activity
+            android:name="com.alexandev.calitreesquirrel.CoverPageActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.alexandev.calitreesquirrel.LoginActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
-    
-	
 </manifest>
