--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.alexandev.calitreesquirrel"
     android:versionCode="1"
@@ -21,7 +20,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.alexandev.calitreesquirrel.ScreenSlideActivity"
+            android:name="com.alexandev.calitreesquirrel.activity.ScreenSlideActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,11 +29,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.alexandev.calitreesquirrel.CoverPageActivity"
+            android:name="com.alexandev.calitreesquirrel.activity.CoverPageActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.alexandev.calitreesquirrel.LoginActivity"
+            android:name="com.alexandev.calitreesquirrel.activity.LoginActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.alexandev.calitreesquirrel.activity.RegisterActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
