--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,31 +20,43 @@
         android:icon="@drawable/sicon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        
         <activity
-            android:name="com.alexandev.calitreesquirrel.activity.ScreenSlideActivity"
+            android:name="com.alexandev.calitreesquirrel.activity.CoverPageActivity"
             android:label="@string/app_name" >
-            <intent-filter>
+           	<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.alexandev.calitreesquirrel.activity.CoverPageActivity"
-            android:label="@string/app_name" >
-        </activity>
+        
         <activity
             android:name="com.alexandev.calitreesquirrel.activity.LoginActivity"
             android:label="@string/app_name" >
         </activity>
+        
         <activity
             android:name="com.alexandev.calitreesquirrel.activity.RegisterActivity"
             android:label="@string/app_name" >
         </activity>
+        
+        <activity
+            android:name="com.alexandev.calitreesquirrel.activity.InstructionsActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
+            android:name="com.alexandev.calitreesquirrel.activity.ScreenSlideActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
         <activity
             android:name="com.alexandev.calitreesquirrel.activity.PhotoIntentActivity"
             android:label="@string/app_name" >
         </activity>
+        
     </application>
 
 </manifest>
