--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
