--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:targetSdkVersion="19" />
 
   
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -59,6 +59,9 @@
             android:label="@string/app_name" >
         </activity>
         
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
+        
+                
     </application>
 
 </manifest>
